--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.0",
     "@chakra-ui/react": "^2.0.0-next.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -10,12 +11,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^9.7.0",
     "framer-motion": "^4.1.17",
+    "graphql": "^16.4.0",
+    "graphql-ws": "^5.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1", 
+    "react-scripts": "5.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
