--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@tiptap/extension-color": "^2.0.0-beta.9",
     "@tiptap/extension-document": "^2.0.0-beta.15",
     "@tiptap/extension-dropcursor": "^2.0.0-beta.25",
+    "@tiptap/extension-gapcursor": "^2.0.0-beta.34",
+    "@tiptap/extension-history": "^2.0.0-beta.21",
     "@tiptap/extension-horizontal-rule": "^2.0.0-beta.31",
     "@tiptap/extension-image": "^2.0.0-beta.27",
     "@tiptap/extension-italic": "^2.0.0-beta.26",
@@ -36,6 +38,7 @@
     "framer-motion": "^4.1.17",
     "graphql": "^16.4.0",
     "graphql-ws": "^5.8.1",
+    "htmr": "^1.0.1",
     "react": "^18.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
